# spell_correction

./: .allennlp_plugins  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  ds_config.json  pyproject.toml
apps/: char_diff_visualizer.py  corpora_of_misspellings_explorer.py  github_typo_corpus_explorer.py  jwtd_data_explorer.py  seq2seq_demo_example.py  wiked_error_corpus_explorer.py
experiments/jwtd_test/0000_cpu/: config.json  metrics.json  metrics_epoch_0.json  metrics_epoch_1.json  metrics_epoch_2.json  metrics_epoch_3.json  metrics_epoch_4.json
experiments/jwtd_test/0000_cpu/vocabulary/: tokens.txt
notebooks/: analyze_T5SpellCorrector.ipynb  analyze_jwtd_seqlen.ipynb  analyze_mt5_filter_func.ipynb  analyze_mt5_large_beam_search.ipynb  analyze_mt5_small_beam_search.ipynb  analyze_mt5_small_matching.ipynb  analyze_mt5_zero_shot_add_original_token_to_masked_text.ipynb  mt5_zero_shot-xlarge.ipynb  mt5_zero_shot.ipynb  preprocess_jwtd-v2.0.ipynb  preprocess_jwtd.ipynb
scripts/: profile_dataset_reader.py
spell_correction/: __init__.py  callbacks.py  hf_ja_seq2seq_metric.py  metrics.py  modules.py  predictor.py  run_seq2seq.py  t5_spell_corrector.py  tokenizer.py  utils.py
tests/: test_metrics.py  test_t5_spell_corrector.py  test_utils.py
tests/fixtures/: jwtd_sample.tsv  jwtd_sample_config.jsonnet  seq2seq_predictor_sample_input.jsonl
training_config/jwtd/: config_for_build_vocab.jsonnet  config_lstm_cell.jsonnet  config_lstm_cell_cpu.jsonnet  config_lstm_cell_gpu.jsonnet  config_lstm_gpu_optuna.jsonnet  config_rnn_cpu.jsonnet  hparams.json
