[tool.poetry]
name = "spell_correction"
version = "0.1.0"
description = ""
authors = ["Tomoaki Nakamura <tyo_yo@icloud.com>"]

[tool.poetry.dependencies]
python = "3.7.6"
streamlit = "^0.72.0"
smart_open = {extras = ["all"], version = "^4.0.1"}
directory_tree = "^0.0.2"
dask = {extras = ["complete"], version = "^2020.12.0"}
flatten-dict = "^0.3.0"
chardiff_html = "^0.1.1"
allennlp = "^1.3.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.2.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
