[tool.poetry]
name = "spell_correction"
version = "0.1.0"
description = ""
authors = ["Tomoaki Nakamura <tyo_yo@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"
streamlit = "^0.72.0"
smart_open = {extras = ["all"], version = "^4.0.1"}
directory_tree = "^0.0.2"
dask = {extras = ["complete"], version = "^2020.12.0"}
flatten-dict = "^0.3.0"
chardiff_html = "^0.1.1"
comet_ml = "^3.2.9"
python-Levenshtein = "^0.12.0"
mecab-python3 = "^1.0.3"
strsimpy = "^0.2.0"
pydantic = "^1.7.3"
deepspeed = {version = "^0.3.11", optional = true}
jsonlines = "^2.0.0"
datasets = "^1.5.0"
sentencepiece = "^0.1.95"
transformers = "^4.4.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.2.9"
pytest-profiling = "^1.7.0"

[tool.poetry.extras]
deepspeed = ["deepspeed"]

[tool.pytest.ini_options]
python_paths = "./"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
